--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsona-openapi-types",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Openapi type",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -10,7 +10,10 @@
   "publishConfig": {
     "access": "public"
   },
-  "keywords": [],
+  "keywords": [
+    "kisa",
+    "jsona-openapi"
+  ],
   "author": "Sigoden Huang <sigoden@gmail.com> (https://sigoden.com/)",
   "homepage": "https://github.com/sigoden/openapi/tree/main/packages/types",
   "repository": {
