--- a/packages/kisa-cli/package.json
+++ b/packages/kisa-cli/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "A cli for kisa",
   "keywords": [
-    "kisa"
+    "kisa",
+    "jsona-openapi",
+    "cli"
   ],
   "author": "Sigoden Huang <sigoden@gmail.com> (https://sigoden.com/)",
   "homepage": "https://github.com/sigoden/openapi/tree/main/packages/kisa-cli",
@@ -24,7 +26,7 @@
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
-    "jsona-openapi-js": "^0.3.0",
+    "jsona-openapi-js": "^0.3.1",
     "typegen-openapi": "workspace:^",
     "use-openapi": "workspace:^",
     "yargs": "^17.2.1"
