--- a/packages/kisa/package.json
+++ b/packages/kisa/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kisa",
   "version": "0.1.0",
-  "description": "A web framework based on koa and openapi.",
+  "description": "A web framework based on koa and openapi",
   "keywords": [
     "kisa",
     "jsona-openapi",
@@ -32,15 +32,14 @@
   "dependencies": {
     "@koa/router": "^10.1.1",
     "@types/koa": "^2.13.4",
-    "@types/koa-bodyparser": "^4.3.4",
     "@types/koa__router": "^8.0.10",
-    "jsona-openapi-types": "workspace:^",
     "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
     "use-openapi": "workspace:^"
   },
   "devDependencies": {
     "@types/supertest": "^2.0.11",
+    "@types/koa-bodyparser": "^4.3.4",
+    "koa-bodyparser": "^4.3.0",
     "supertest": "^6.1.6"
   }
 }
