--- a/packages/use-openapi/package.json
+++ b/packages/use-openapi/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsona-openapi-deref",
-  "version": "0.1.0",
-  "description": "Deref openapi spec",
+  "name": "use-openapi",
+  "version": "0.6.0",
+  "description": "Generate routes from openapi object",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -11,29 +11,30 @@
     "access": "public"
   },
   "keywords": [
-    "jsona-openapi",
     "kisa",
+    "jsona-openapi",
     "openapi",
-    "route",
     "koa"
   ],
   "author": "Sigoden Huang <sigoden@gmail.com> (https://sigoden.com/)",
-  "homepage": "https://github.com/sigoden/openapi/tree/main/packages/deref",
+  "homepage": "https://github.com/sigoden/openapi/tree/main/packages/use-openapi",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sigoden/openapi.git",
-    "directory": "packages/deref"
+    "directory": "packages/use-openapi"
   },
   "license": "MIT",
   "scripts": {
+    "test": "jest",
     "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf dist",
     "prepublishOnly": "npm run -s clean && npm run -s build"
   },
   "dependencies": {
-    "dag-map": "^2.0.2",
+    "ajv": "^8.8.2",
+    "ajv-formats": "^2.1.1",
     "jsona-openapi-types": "workspace:^",
-    "lodash.get": "^4.4.2",
-    "traverse": "^0.6.6"
+    "jsona-openapi-deref": "workspace:^",
+    "lodash.get": "^4.4.2"
   }
 }
