--- a/packages/typegen-openapi/package.json
+++ b/packages/typegen-openapi/package.json
@@ -31,8 +31,8 @@
   "dependencies": {
     "change-case": "^4.1.2",
     "ejs": "^3.1.6",
-    "jsona-openapi-types": "workspace:^",
-    "jsona-openapi-deref": "workspace:^",
+    "jsona-openapi-types": "^0.1.2",
+    "jsona-openapi-deref": "^0.1.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2"
   }
