--- a/packages/use-openapi/package.json
+++ b/packages/use-openapi/package.json
@@ -33,8 +33,8 @@
   "dependencies": {
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
-    "jsona-openapi-types": "workspace:^",
-    "jsona-openapi-deref": "workspace:^",
+    "jsona-openapi-types": "^0.1.2",
+    "jsona-openapi-deref": "^0.1.0",
     "lodash.get": "^4.4.2"
   }
 }
