--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "scripts": {
+    "format": "prettier --write .",
     "lint": "eslint .",
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.3.1",
-    "lerna": "^4.0.0",
-    "prettier": "^2.4.1",
+    "@types/jest": "^29.1.1",
+    "jest": "^29.1.1",
+    "lerna": "^5.5.4",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
