--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "allowSyntheticDefaultImports": true,
     "target": "es6",
     "sourceMap": true,
-    "lib": ["ES2018"],
+    "lib": ["ES2018"]
   }
 }
